salesforce/force-app/main/default/objects/AppUser__c/AppUser__c.object-meta.xml
<CustomObject>
  <label>App User</label>
  <pluralLabel>App Users</pluralLabel>
  <nameField>
    <label>Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>