salesforce/force-app/main/default/objects/AppUser__c/fields/ExternalUserId__c.field-meta.xml
<CustomField>
  <fullName>ExternalUserId__c</fullName>
  <label>External User Id</label>
  <type>Text</type>
  <length>80</length>
  <externalId>true</externalId>
  <unique>true</unique>
  <required>true</required>
</CustomField>