salesforce/force-app/main/default/objects/AppUser__c/fields/PasswordHash__c.field-meta.xml
<CustomField>
  <fullName>PasswordHash__c</fullName>
  <label>Password Hash</label>
  <type>Text</type>
  <length>255</length>
  <description>BCrypt hash of the password for the CarShary demo (do not store plaintext).</description>
</CustomField>