salesforce/force-app/main/default/objects/AppUser__c/fields/RatingCount__c.field-meta.xml
<CustomField>
  <fullName>RatingCount__c</fullName>
  <label>Rating Count</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>