salesforce/force-app/main/default/objects/AppUser__c/fields/RatingSum__c.field-meta.xml
<CustomField>
  <fullName>RatingSum__c</fullName>
  <label>Rating Sum</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>