salesforce/force-app/main/default/objects/AppUser__c/fields/Role__c.field-meta.xml
<CustomField>
  <fullName>Role__c</fullName>
  <label>Role</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Rider</fullName>
        <default>true</default>
        <label>Rider</label>
      </value>
      <value>
        <fullName>Driver</fullName>
      </value>
      <value>
        <fullName>Admin</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>