salesforce/force-app/main/default/objects/AppUser__c/fields/VerificationDocUrl__c.field-meta.xml
<CustomField>
  <fullName>VerificationDocUrl__c</fullName>
  <label>Verification Doc URL</label>
  <type>Url</type>
  <description>Paste a Drive link or any URL for demo verification.</description>
</CustomField>