salesforce/force-app/main/default/objects/AppUser__c/fields/VerificationNotes__c.field-meta.xml
<CustomField>
  <fullName>VerificationNotes__c</fullName>
  <label>Verification Notes</label>
  <type>LongTextArea</type>
  <length>1000</length>
  <description>Admin notes for verification approval/rejection (demo).</description>
</CustomField>