salesforce/force-app/main/default/objects/AppUser__c/fields/VerificationStatus__c.field-meta.xml
<CustomField>
  <fullName>VerificationStatus__c</fullName>
  <label>Verification Status</label>
  <type>Picklist</type>
  <description>Driver verification workflow (demo).</description>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>None</fullName><default>true</default><label>None</label></value>
      <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
      <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
      <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>