salesforce/force-app/main/default/objects/AppUser__c/fields/Verified__c.field-meta.xml
<CustomField>
  <fullName>Verified__c</fullName>
  <label>Verified</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>